# similarity-test

./: .gitattributes  .gitignore  Dockerfile  README.md  check_text.py  classification_scores_20250207_211207.csv  config.py  count.py  docker-compose.yml  document.py  euclidean_similarity_results.csv  pyproject.toml  requirements.txt  try.py  verify.py
checkpoints/: checkpoint_default.json
data/new_texts/: new_texts.csv
data/true_set/: true_set.csv
dataset/: cosine_similarity_results (3).csv:Zone.Identifier  cosine_similarity_results.csv  ep-wo-native-traits-false-claim1.csv:Zone.Identifier  ep-wo-native-traits-true-claim1.csv  ep-wo-native-traits-true-claim1.csv:Zone.Identifier  euclidean_similarity_results.csv  false_claim.csv  high_similarity_results.csv  high_similarity_results80.csv  jaccard_similarity_results (1).csv  jaccard_similarity_results (1).csv:Zone.Identifier  merged_similarity_results.csv  new_test_set.csv  new_test_set.csv:Zone.Identifier  new_true_set.csv  new_true_set.csv:Zone.Identifier  result.csv  true_set.csv
dataset/dataset_backup/: conc_new_texts.csv  conc_true_set.csv
dataset/true_set/: true_set.csv
src/analysis/: classifier.py  similarity.py
src/embeddings/: centroid.py  generator.py
src/preprocessing/: cleaner.py  loader.py
src/storage/: db_manager.py
utils/: generate_sample_data.py
web/dashboard/: app.py  controls.py  metrics.py  plots.py
