# pyproject.toml
[tool.poetry]
name = "text-similarity"
version = "0.1.0"
description = "Text similarity analysis system"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
sentence-transformers = "^2.2.2"
streamlit = "^1.28.0"
psycopg2-binary = "^2.9.9"
plotly = "^5.18.0"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
